get parameter from category page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="main-header-container">
     <mat-toolbar>
-        <button  mat-icon-button routerLink ="/" style="background-color: rgb(248, 2, 2);" >
+        <button  mat-icon-button class="text-white" routerLink ="/" style="background-color: rgb(248, 2, 2);" >
             <mat-icon>home</mat-icon>
         </button>
         
