--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -7,7 +7,7 @@
 </button>
 
 <div class="container">
-   <img src="res.image" alt="">
+   <img [src]="res.image" alt="">
    <h2>{{res.price | currency}}</h2>
    <p>{{res.description}}</p>
 
