--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -8,8 +8,8 @@
             </ng-container>
         </ng-container>
         
-        <!-- TODO: ახალის და ძველის დალაგება -->
-        <span>Order</span>
+        <!-- : ახალის და ძველის დალაგება -->
+        
         <div class="btn-group" role="group" aria-label="Basic outlined example">
             <button type="button" class="btn btn-primary">New</button>
             <button type="button" class="btn btn-outline-primary">Old</button>
