--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,10 +1,10 @@
 .card-main-container{
     width: 250px;
     height: 390px;
-    border: 1px solid white;
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
-    background-color: white;
-    box-shadow: 1px 2px 2px 1px rgb(47, 184, 12);
+    background-color: rgba(255, 255, 255, 0.63);
+    box-shadow: 1px 2px 2px 1px rgb(6, 9, 206);
     display: flex;
     justify-content: center;
     flex-direction: column;
