--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -76,30 +76,34 @@
       </button>
     </div>
   </div>
+ -->
   
-  Bootstrap JS bundle with Popper -->
-  <div class="container d-flex justify-content-center">
-    <div id="carouselExampleCaptions" class="carousel slide" style="width: 550px; height: 250px; margin-bottom: 200px;" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" class="d-block w-100" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First Slide</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+
+
+
+<!-- <h1 style="display: flex; align-items: center; justify-content: center; color: red; border: 2px solid black;text-align: center ; width: 100px;">Most Visited Products</h1> -->
+<h2 style="display: flex;justify-content: center; justify-content: center;  text-decoration: overline  double;  ">Most Visited Products</h2>
+  <div class="container d-flex justify-content-center align-itemscenter" style="color: black;background-color: #212529; height: 500px; width: 100%; border-radius: 30px;">
+    <div id="carouselExampleCaptions" class="carousel slide" style="width: 550px; height: 250px; ;" data-bs-ride="carousel">
+      <div class="carousel-inner ">
+        <div class="carousel-item active " style="margin-top: 50px;">
+          <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" class="d-block w-100"  alt="First slide " style="border-radius: 10px;">
+          <div class="carousel-caption d-none d-md-block" style="color:black;">
+            <h3>odisey G9</h3>
+            <p>" >4K 165hz 49 inch monitor for "Gamers"</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg" class="d-block w-100" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second Slide</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+        <div class="carousel-item" style="margin-top: 50px;">
+          <img src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg" class="d-block w-100" alt="Second slide" style="width: 650px; height:390px; border-radius: 10px;">
+          <div class="carousel-caption d-none d-md-block" style="color: rgb(255, 255, 255);">
+            <h5></h5>
+            <p style="margin-bottom: 50px;">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="https://fakestoreapi.com/img/51Y5NI-I5jL._AC_UX679_.jpg" class="d-block w-100" alt="Third slide">
+        <div class="carousel-item" style="margin-top: 50px; border-radius: 10px;">
+          <img src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg" class="d-block w-100" alt="Third slide" style="width: 650px; height:390px;" style="border-radius: 10px;">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third Slide</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5></h5>
           </div>
         </div>
       </div>
@@ -113,7 +117,8 @@
       </button>
     </div>
   </div>
-  
 
+  
+<h1 style="display: flex; align-items: center; justify-content: center; text-decoration:underline;">Categories</h1>
   
   
