--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -17,7 +17,9 @@
     height: auto;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 1px;
-    box-shadow: 1px 1px 1px 1px rgb(0, 0, 0);
+    /* box-shadow: 1px 1px 1px 1px rgb(0, 0, 0); */
+    border: 3px solid black;
+    border-radius: 7px;
     display: flex;
     justify-content: center;
     flex-direction: column;
