--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -1,107 +1,23 @@
-<!-- <div class="container d-flex justify-content-center">
-  <div id="carouselExampleCaptions" class="carousel slide" style="width: 500px; height: 300px; margin-bottom: 200px;">
-      <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-          <div class="carousel-item active">
-              <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg">
-              <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide </h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-              </div>
-          </div>
-          <div class="carousel-item">
-              <img src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg">
-              <div class="carousel-caption d-none d-md-block">
-                  <h5>Second  label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-              </div>
-          </div>
-          <div class="carousel-item">
-              <img src="https://fakestoreapi.com/img/51Y5NI-I5jL._AC_UX679_.jpg">
-              <div class="carousel-caption d-none d-md-block">
-                  <h5> slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-              </div>
-          </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-      </button>
-  </div>
-</div>
-
-
- -->
- <!-- <div class="container d-flex justify-content-center">
-    <div id="carouselExampleCaptions" class="carousel slide" style="width: 550px; height: 250px; margin-bottom: 200px;" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" class="d-block w-100" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First Slide</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://fakestoreapi.com/img/71pWzhdJNwL._AC_UL640_QL65_ML3_.jpg" class="d-block w-100" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second Slide</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://fakestoreapi.com/img/51Y5NI-I5jL._AC_UX679_.jpg" class="d-block w-100" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third Slide</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
- -->
-  
-
-
-
-<!-- <h1 style="display: flex; align-items: center; justify-content: center; color: red; border: 2px solid black;text-align: center ; width: 100px;">Most Visited Products</h1> -->
-<h2 style="display: flex;justify-content: center; justify-content: center;  text-decoration: overline  double;  ">Most Visited Products</h2>
-  <div class="container d-flex justify-content-center align-itemscenter" style="color: black;background-color: #212529; height: 500px; width: 100%; border-radius: 30px;">
+<!-- <h2 style="display: flex;justify-content: center; justify-content: center;  text-decoration: overline  double;  ">Most Visited Products</h2> -->
+  <div class="container d-flex justify-content-center align-itemscenter" style="color: black;background-color: #212529; height: 500px; width: 100%; border-radius: 10px; ">
     <div id="carouselExampleCaptions" class="carousel slide" style="width: 550px; height: 250px; ;" data-bs-ride="carousel">
       <div class="carousel-inner ">
         <div class="carousel-item active " style="margin-top: 50px;">
-          <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" class="d-block w-100"  alt="First slide " style="border-radius: 10px;">
+          <img src="https://www.shutterstock.com/shutterstock/photos/1680467542/display_1500/stock-photo-laptop-blank-screen-on-wood-table-with-coffee-cafe-background-mockup-template-for-your-text-1680467542.jpg" class="d-block w-100"  alt="First slide " style="border-radius: 10px;">
           <div class="carousel-caption d-none d-md-block" style="color:black;">
             <h3>odisey G9</h3>
             <p>" >4K 165hz 49 inch monitor for "Gamers"</p>
           </div>
         </div>
         <div class="carousel-item" style="margin-top: 50px;">
-          <img src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg" class="d-block w-100" alt="Second slide" style="width: 650px; height:390px; border-radius: 10px;">
+          <img src="https://media.istockphoto.com/id/1487972668/photo/artificial-neural-network-abstract-technology-background.webp?b=1&s=170667a&w=0&k=20&c=h9jDLJZUi6NPQ34pXXKfAQa6gGGHyYFtL3QyJ0uS6hw=" class="d-block w-100" alt="Second slide" style="width: 650px; height:390px; border-radius: 10px;">
           <div class="carousel-caption d-none d-md-block" style="color: rgb(255, 255, 255);">
             <h5></h5>
             <p style="margin-bottom: 50px;">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s</p>
           </div>
         </div>
-        <div class="carousel-item" style="margin-top: 50px; border-radius: 10px;">
-          <img src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg" class="d-block w-100" alt="Third slide" style="width: 650px; height:390px;" style="border-radius: 10px;">
+        <div class="carousel-item" style=" border-radius: 10px; margin-top: 50px;">
+          <img src="https://www.shutterstock.com/image-photo/department-laptops-electronics-store-table-260nw-1288365160.jpg" class="d-block w-100" alt="Third slide" style="width: 650px; height:390px;" style="border-radius: 10px;">
           <div class="carousel-caption d-none d-md-block">
             <h5></h5>
           </div>
