--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,13 +2,19 @@
       <div class="container text-center">
       <h2>&copy; about us </h2>
       
-      <h4> telephone (412)467732135</h4> 
+      <h4 style="display: flex;" > telephone (412)467732135</h4> 
 
-      <h4 style="color: red;" >GMAIL - randomstore.api@gmail.com</h4>
+      <h4 style=" display: flex; color: red;" >GMAIL - randomstore.api@gmail.com</h4>
+
+      <h4>sponsors</h4>
+
+      <h4 style="display: flex-; justify-content: center;text-align: center; " >Hot-Line</h4>
 
       
+      <a routerLink="/about">About</a>
       </div>
     </footer>
 <div class="footerDiv">
+  <i class="fa-brands fa-instagram"></i>
 
 </div>
