--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,20 +1,209 @@
-<footer class="footer mt-auto py-3 bg-dark text-white ">
+<!-- <footer class="footer mt-auto py-3 bg-dark text-white ">
       <div class="container text-center">
       <h2>&copy; about us </h2>
       
       <h4 style="display: flex;" > telephone (412)467732135</h4> 
 
-      <h4 style=" display: flex; color: red;" >GMAIL - randomstore.api@gmail.com</h4>
+      <h4 style=" display: flex; color: rgb(62, 0, 207);" >GMAIL - randomstore.api@gmail.com</h4>
 
       <h4>sponsors</h4>
 
       <h4 style="display: flex-; justify-content: center;text-align: center; " >Hot-Line</h4>
 
       
-      <a routerLink="/about">About</a>
+      
       </div>
     </footer>
 <div class="footerDiv">
   <i class="fa-brands fa-instagram"></i>
 
+</div> -->
+<div class="container-fluid bg-dark text-white footer mt-4">
+
+  <div class="container py-5">
+
+      <div class="row">
+          <div class="col-12 col-md-4 mb-3 ">
+              <h5>POPULAR POSTS</h5>
+              <!-- popualar posts -->
+              <div class="d-flex mb-3">
+                  <div class="pe-2">
+                      <img src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg"
+                          width="60" height="60" class=" rounded" alt="...">
+                  </div>
+                  <div class="">
+                      <a class="text-decoration-none post-link" href="">How to Use WordPress Pingbacks
+                          And<br> Trackbacks
+                      </a>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <div class="pe-2">
+                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib-60x60.png"
+                          width="60" height="60" class=" rounded" alt="...">
+                  </div>
+                  <div class="">
+
+                      <a class="text-decoration-none post-link" href="">This is how comments will be
+                          <br>
+                          displayed on sparkling WP <br>theme
+
+                      </a>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <div class="pe-2">
+                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib-60x60.png"
+                          width="60" height="60" class=" rounded" alt="...">
+                  </div>
+                  <div class="">
+
+                      <a class="text-decoration-none post-link" href="">We Created This Awesome Free
+                          <br>
+                          WordPress Theme To Set New <br> Industry Standard
+
+                      </a>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <div class="pe-2">
+                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/03/slider-image-blurry-60x60.jpg"
+                          width="60" height="60" class=" rounded" alt="...">
+                  </div>
+                  <div class="">
+
+                      <a class="text-decoration-none post-link" href="">Post Format: Wordpress Tiled
+                          <br>Gallery <br>
+                          <br>
+
+                      </a>
+                  </div>
+              </div>
+
+          </div>
+
+          <div class="col-12 col-md-4 mb-3 color text-white">
+              <ul class="list-group text-white">
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Post Formats
+                      </div>
+                      <span>16</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          uncetegorized
+                      </div>
+                      <span>10</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          template
+                      </div>
+                      <span>10</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Markup
+                      </div>
+                      <span>6</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Edge Case
+                      </div>
+                      <span>6</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Slider
+                      </div>
+                      <span>3</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Media
+                      </div>
+                      <span>2</span>
+                  </li>
+                  <li
+                      class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
+                      <div>
+                          Featured
+                      </div>
+                      <span>2</span>
+                  </li>
+              </ul>
+          </div>
+
+          <div class="col-12 col-md-4 mb-3">
+              <h5>colorlib logo</h5>
+              <p>Awesome and completely free WordPress WooCommerce themes to take your ecommerce
+                  website to the next level.
+
+                  If you are having problems with theme setup, please feel free to use Colorlib
+                  support forum.</p>
+              <ul class="nav flex-column">
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+                  </li>
+                  <li class="nav-item mb-2"><a href="#"
+                          class="nav-link p-0 text-body-secondary">Features</a></li>
+                  <li class="nav-item mb-2"><a href="#"
+                          class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+                  </li>
+                  <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a>
+                  </li>
+              </ul>
+          </div>
+
+
+      </div>
+
+
+
+  </div>
 </div>
+<div class="container-fluid footer-social">
+  <div class="container">
+
+      <div class="align-items-center d-flex justify-content-center ">
+          <ul class="nav">
+              <li class="nav-item">
+                  <a class="nav-link social-link twitter" href="#"><i
+                          class="fa-brands fa-twitter"></i></a>
+              </li>
+
+
+              <li class="nav-item ">
+                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-facebook-f"></i>
+                  </a>
+
+
+              <li class="nav-item ">
+                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-youtube"></i>
+                  </a>
+
+
+              <li class="nav-item ">
+                  <a class="nav-link social-link twitter" href="#"><i
+                          class="fa-brands fa-google-plus-g"></i>
+                  </a>
+
+
+              <li class="nav-item ">
+                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-github"></i>
+
+                  </a>
+              </li>
+          </ul>
+      </div>
+      </div>
+  </div>
