--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -1,4 +1,4 @@
-<!-- <h2 style="display: flex;justify-content: center; justify-content: center;  text-decoration: overline  double;  ">Most Visited Products</h2> -->
+<!-- <h2 style="display: flex;justify-content: center; justify-content: center;  text-decoration: overline  double;  ">Most Visited Products</h2>
   <div class="container d-flex justify-content-center align-itemscenter" style="color: black;background-color: #212529; height: 500px; width: 100%; border-radius: 10px; ">
     <div id="carouselExampleCaptions" class="carousel slide" style="width: 550px; height: 250px; ;" data-bs-ride="carousel">
       <div class="carousel-inner ">
@@ -36,5 +36,73 @@
 
   
 <h1 style="display: flex; align-items: center; justify-content: center; text-decoration:underline;">Categories</h1>
+   -->
   
-  
+   <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib.png"
+                class="d-block w-100" alt="...">
+
+            <div class="carousel-caption d-none d-md-inline-block text-start color-dark">
+                <div class="d-block-inline  cover-title p-2">
+                    <h5 class="h5-first">How to Use WordPress Pingbacks And Trackbacks </h5>
+                    
+                </div>
+                <div class="cover-body p-2">
+                    <p>Dynamically target high-payoff intellectual capital for customized technologies.
+                        Objectively
+                        integrate emerging core competencies before process-centric communities. </p>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="carousel-item">
+            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib.png"
+                class="d-block w-100" alt="...">
+
+            <div class="carousel-caption d-none d-md-inline-block text-start color-dark">
+                <div class="d-block-inline  cover-title p-2">
+                    <h5 class="h5-first">We Created This Awesome Free WordPress Theme To Set New Industry
+                        Standart</h5>
+                    
+                </div>
+                <div class="cover-body p-2">
+                    <p>welcome to wordpress.this is your first Post.Edit or delete it, then start blogging</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/03/slider-image-blurry.jpg"
+                class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Post Format:WordPress Tiled Gallery</h5>
+                <p>Cras id est lobortis, sodales dui sit amet, tempor urna. Aenean condimentum lobortis
+                    elementum. Vivamus tincidunt lobortis purus, a bibendum tellus imperdiet non. Proin blandit
+                    ultricies sapien, non feugiat justo. Nulla sem tortor, venenatis ut egestas a, facilisis et
+                    dolor. Aenean a eros molestie, condimentum urna sit amet, congue nulla. Ut pharetra quam
+                    velit, a […]</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
