--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -106,3 +106,4 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<h2 style="display: flex; align-items: center; justify-content: center; margin-top: 30px; text-decoration: overline double; " >Categories</h2>
