--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -24,7 +24,7 @@
 
       <div class="row">
           <div class="col-12 col-md-4 mb-3 ">
-              <h5>POPULAR POSTS</h5>
+              <h5>POPULAR PRODUCTS</h5>
               <!-- popualar posts -->
               <div class="d-flex mb-3">
                   <div class="pe-2">
@@ -32,48 +32,47 @@
                           width="60" height="60" class=" rounded" alt="...">
                   </div>
                   <div class="">
-                      <a class="text-decoration-none post-link" href="">How to Use WordPress Pingbacks
-                          And<br> Trackbacks
+                      <a class="text-decoration-none post-link" href="">SanDisk SSD PLUS 1TB Internal SSD - <br> SATA III 6 Gb/s
+                           Trackbacks
                       </a>
                   </div>
               </div>
               <div class="d-flex mb-3">
                   <div class="pe-2">
-                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib-60x60.png"
+                      <img src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
                           width="60" height="60" class=" rounded" alt="...">
                   </div>
                   <div class="">
 
-                      <a class="text-decoration-none post-link" href="">This is how comments will be
-                          <br>
-                          displayed on sparkling WP <br>theme
-
-                      </a>
-                  </div>
-              </div>
-              <div class="d-flex mb-3">
-                  <div class="pe-2">
-                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib-60x60.png"
-                          width="60" height="60" class=" rounded" alt="...">
-                  </div>
-                  <div class="">
-
-                      <a class="text-decoration-none post-link" href="">We Created This Awesome Free
-                          <br>
-                          WordPress Theme To Set New <br> Industry Standard
+                      <a class="text-decoration-none post-link" href="">Fjallraven - Foldsack No<br> 1 Backpack, Fits 15 Laptops
+                          
+                           
 
                       </a>
                   </div>
               </div>
               <div class="d-flex mb-3">
                   <div class="pe-2">
-                      <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/03/slider-image-blurry-60x60.jpg"
+                      <img src="https://fakestoreapi.com/img/71YAIFU48IL._AC_UL640_QL65_ML3_.jpg"
                           width="60" height="60" class=" rounded" alt="...">
                   </div>
                   <div class="">
 
-                      <a class="text-decoration-none post-link" href="">Post Format: Wordpress Tiled
-                          <br>Gallery <br>
+                      <a class="text-decoration-none post-link" href="">White Gold Plated Princess
+                        
+
+                      </a>
+                  </div>
+              </div>
+              <div class="d-flex mb-3">
+                  <div class="pe-2">
+                      <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg"
+                          width="60" height="60" class=" rounded" alt="...">
+                  </div>
+                  <div class="">
+
+                      <a class="text-decoration-none post-link" href="">Samsung 49-Inch CHG90 144Hz<br>Curved Gaming Monitor (LC49HG90DMNXZA) <br> – Super Ultrawide Screen QLED
+                          
                           <br>
 
                       </a>
@@ -86,59 +85,58 @@
               <ul class="list-group text-white">
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
-                      <div>
-                          Post Formats
+                      <div style="margin-left:130px; text-decoration: underline;">
+                          <h2 style="color: red;" >Working Hours</h2>
                       </div>
-                      <span>16</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          uncetegorized
+                          Monday
                       </div>
-                      <span>10</span>
+                      <span style="color: blue;" >10Am-10Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          template
+                        Tuesday
                       </div>
-                      <span>10</span>
+                      <span style="color: blue;" >10Am-10Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          Markup
+                        Wednesday
                       </div>
-                      <span>6</span>
+                      <span style="color: blue;" >10Am-10Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          Edge Case
+                        Thursday
                       </div>
-                      <span>6</span>
+                      <span style="color: blue;" >10Am-10Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          Slider
+                        Friday
                       </div>
-                      <span>3</span>
+                      <span style="color: blue;" >10Am-10Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          Media
+                        Saturday  
                       </div>
-                      <span>2</span>
+                      <span style="color: blue;" >12Am-8Pm</span>
                   </li>
                   <li
                       class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-start border-0">
                       <div>
-                          Featured
+                        Sunday 
                       </div>
-                      <span>2</span>
+                      <span style="color: blue;" >break</span>
                   </li>
               </ul>
           </div>
@@ -177,29 +175,27 @@
       <div class="align-items-center d-flex justify-content-center ">
           <ul class="nav">
               <li class="nav-item">
-                  <a class="nav-link social-link twitter" href="#"><i
-                          class="fa-brands fa-twitter"></i></a>
-              </li>
+                  <a class="nav-link social-link twitter" href="#"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"/></svg> </a>
+              
 
 
-              <li class="nav-item ">
-                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-facebook-f"></i>
+              <li class="nav-item " style="color: blue;">
+                  <a class="nav-link social-link twitter" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"/></svg>
                   </a>
 
 
               <li class="nav-item ">
-                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-youtube"></i>
+                  <a class="nav-link social-link twitter" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
                   </a>
 
 
               <li class="nav-item ">
-                  <a class="nav-link social-link twitter" href="#"><i
-                          class="fa-brands fa-google-plus-g"></i>
+                  <a class="nav-link social-link twitter" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 488 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"/></svg>
                   </a>
 
 
               <li class="nav-item ">
-                  <a class="nav-link social-link twitter" href="#"><i class="fa-brands fa-github"></i>
+                  <a class="nav-link social-link twitter" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z"/></svg>
 
                   </a>
               </li>
