--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -17,14 +17,13 @@
     height: auto;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 1px;
-    /* box-shadow: 1px 1px 1px 1px rgb(0, 0, 0); */
-    border: 3px solid black;
+    border: 2px solid rgb(30, 30, 31);
     border-radius: 7px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    margin-bottom: 10px;
+    
     
 }
