--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -7,8 +7,10 @@
 </button>
 
 <div class="container">
-   <img [src]="res.image" alt="">
+   <img style="width: 300px; height: 400px;" [src]="res.image" alt="">
    <h2>{{res.price | currency}}</h2>
    <p>{{res.description}}</p>
+   <!-- <button (click)="addCardInBasket()" mat-raised-button color="primary">add to cart</button> -->
+    
 
 </div>
