--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -9,8 +9,8 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/01/city-landscape-slider.jpg"
-                class="d-block w-100 "  alt="...">
+            <img src="https://t3.ftcdn.net/jpg/06/16/32/56/360_F_616325659_BOYDbtlbIaa7g2s81HfulxujPcPLZHbj.jpg"
+                class="d-block w-100 "  alt="..." style="height: 450px;">
 
             <div class="carousel-caption d-none d-md-inline-block text-start color-dark">
                 <div class="d-block-inline  cover-title p-2">
@@ -18,21 +18,21 @@
                     
                 </div>
                 <div class="cover-body p-2">
-                    <p>Dynamically target high-payoff intellectual capital for customized technologies.
-                        Objectively
-                        integrate emerging core competencies before process-centric communities. </p>
+                    <p>
+                         </p>
                 </div>
 
             </div>
 
         </div>
         <div class="carousel-item">
-            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/02/slider-wallpaper-colorlib.png"
-                class="d-block w-100" alt="...">
+            <img src="https://www.withum.com/wp-content/uploads/2023/02/ecommerce-enablement-technologies-wp.png"
+                 class="d-block w-100" alt="..." style="height: 450px;">
+               
 
             <div class="carousel-caption d-none d-md-inline-block text-start color-dark">
                 <div class="d-block-inline  cover-title p-2">
-                    <h5 class="h5-first">We Created This Awesome Free WordPress Theme To Set New Industry
+                    <h5 class="h5-first">We Created This Awesome shoping place where is everything
                         Standart</h5>
                     
                 </div>
@@ -43,8 +43,8 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://149842022.v2.pressablecdn.com/sparkling/wp-content/uploads/sites/52/2014/03/slider-image-blurry.jpg"
-                class="d-block w-100" alt="...">
+            <img src="https://thumbs.wbm.im/pw/small/5a20614ddc74cbdc046b5746f0e556aa.jpg"
+                class="d-block w-100" alt="..." style="height: 450px;">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Post Format:WordPress Tiled Gallery</h5>
                 <p>Cras id est lobortis, sodales dui sit amet, tempor urna. Aenean condimentum lobortis
@@ -66,6 +66,5 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-<h2 style="display: flex; align-items: center; justify-content: center; margin-top: 30px; text-decoration: overline double; " >Categories</h2> 
 
 
