--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -14,11 +14,12 @@
 
             <div class="carousel-caption d-none d-md-inline-block text-start color-dark">
                 <div class="d-block-inline  cover-title p-2">
-                    <h5 class="h5-first">How to Use WordPress Pingbacks And Trackbacks </h5>
+                    <h4 class="h5-first">about our shop[RandomShop]</h4>
                     
                 </div>
                 <div class="cover-body p-2">
                     <p>
+                        Discover a World of Possibilities at RandomShop! Step into a realm where style meets substance, and every purchase is an expression of your individuality.
                          </p>
                 </div>
 
