--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -25,3 +25,11 @@
     
     
 }
+.filter-input-div{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 20px;
+}
