--- a/src/app/components/carousel-menu/carousel-menu.component.html
+++ b/src/app/components/carousel-menu/carousel-menu.component.html
@@ -38,7 +38,7 @@
                     
                 </div>
                 <div class="cover-body p-2">
-                    <p>welcome to wordpress.this is your first Post.Edit or delete it, then start blogging</p>
+                    <p>welcome to our site.this is your first Post.Edit or delete it, then start blogging</p>
                 </div>
 
             </div>
@@ -47,12 +47,8 @@
             <img src="https://thumbs.wbm.im/pw/small/5a20614ddc74cbdc046b5746f0e556aa.jpg"
                 class="d-block w-100" alt="..." style="height: 450px;">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Post Format:WordPress Tiled Gallery</h5>
-                <p>Cras id est lobortis, sodales dui sit amet, tempor urna. Aenean condimentum lobortis
-                    elementum. Vivamus tincidunt lobortis purus, a bibendum tellus imperdiet non. Proin blandit
-                    ultricies sapien, non feugiat justo. Nulla sem tortor, venenatis ut egestas a, facilisis et
-                    dolor. Aenean a eros molestie, condimentum urna sit amet, congue nulla. Ut pharetra quam
-                    velit, a […]</p>
+                <h5>//////////////////////////</h5>
+                <p>  ___  </p>
             </div>
         </div>
     </div>
