--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -30,3 +30,7 @@
 <ng-template #cardNotFound>
 <p>კალათა ცარიელია </p>
 </ng-template>
+
+<button mat-raised-button disabled>
+{{TotalPriceVariable | currency}}
+</button>
