--- a/src/app/components/filter-input/filter-input.component.html
+++ b/src/app/components/filter-input/filter-input.component.html
@@ -1,6 +1,6 @@
 <form> 
     <mat-form-field class = "example-full-width">
-        <mat-label>ძებნა</mat-label>
+        <mat-label>search</mat-label>
         <input matInput placeholder="......" (input)="searchTextFunc($event)">
     </mat-form-field>
 </form>
