--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -27,3 +27,11 @@
     font-family: sans-serif;
     margin: 20px 0px ;
 }
+.filter-input-container{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: 20px;
+}
